tests/regression/illtyped/wild2.gr
foo : Int -> Int
foo _ = 0
